--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "lint": "ng lint",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "prepare": "husky"
+    "prepare": "husky && husky install"
   },
   "lint-staged": {
-    "*.ts": [ 
+    "*.ts": [
       "prettier --write"
     ],
     "*.html": [
@@ -46,7 +46,7 @@
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
