:art: add store and modifie change detection strategy

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,11 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "extends": ["plugin:@ngrx/all"]
+    }
+  ]
 }
