--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "ng test --watch",
     "lint": "ng lint",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
@@ -36,21 +37,23 @@
     "@ngrx/effects": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^19.0.0",
     "@angular-devkit/build-angular": "^19.0.2",
     "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "^19.0.0",
     "@ngrx/eslint-plugin": "^19.0.0",
-    "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "angular-eslint": "19.0.2",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
-    "jasmine-core": "~5.4.0",
-    "karma-coverage": "~2.2.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.1",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
     "typescript": "~5.7.3",
