:speech_balloon: added localise translate for fr an en laguages

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets/i18n"
             ],
             "styles": ["src/styles.scss"],
             "scripts": []
